--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,35 @@ services:
     volumes:
       - ./fastapi/app/:/app
     tty: true
+    depends_on:
+      - db
+  db:
+    image: postgres:latest
+    restart: always
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_SERVER: db
+      POSTGRES_PORT: 5432
+      POSTGRES_DB: sample
+    ports:
+      - 5432:5432
+    volumes:
+      - ./db/postgres:/var/lib/postgresql/data
+  pgadmin:
+    image: dpage/pgadmin4
+    restart: always
+    ports:
+      - 8001:80
+    environment:
+      PGADMIN_DEFAULT_EMAIL: hoge@example.com
+      PGADMIN_DEFAULT_PASSWORD: password
+    volumes:
+      - ./db/pgadmin:/var/lib/pgadmin
+    depends_on:
+      - db
 #  front:
 #    build:
 #      context: ./front
 #    ports:
 #      - "5000:3000"
-#  db:
